--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/ubuntu": "^4.5.11",
+    "daisyui": "^2.31.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
