--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-notion": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "18.8.5",
